Add pkg-config file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,8 @@
 AUTOMAKE_OPTIONS = foreign
 
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libspinner.pc
+
 lib_LTLIBRARIES = libspinner.la
 libspinner_la_SOURCES = spinner.c
 include_HEADERS = spinner.h
