Remove accidentally incorrect header.
Also add -Wall to CFLAGS.

--- a/configure.ac
+++ b/configure.ac
@@ -2,6 +2,8 @@ AC_PREREQ(2.59)
 AC_INIT(libspinner, 0.0.1, [russ@eatnumber1.com])
 AC_CONFIG_FILES(libspinner.pc)
 
+CFLAGS+="-Wall"
+
 AM_INIT_AUTOMAKE
 
 AC_LANG(C)
