--- a/configure.ac
+++ b/configure.ac
@@ -8,7 +8,11 @@ AM_INIT_AUTOMAKE
 
 AC_LANG(C)
 AC_PROG_CC
+AC_PROG_CC_STDC
 AC_PROG_LIBTOOL
+
+AC_CHECK_HEADER(stdbool.h, [],
+  AC_MSG_ERROR([stdbool.h not found]))
 
 AC_CHECK_PROG(POD2MAN, pod2man, pod2man)
 if test x"$POD2MAN" = x""; then
