Add manpages for noreturn.
Adds the following manpages:
	fnprime.3
	fprime.3
	nprime.3
	prime.3
	fspinner.3
	noreturn.7

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,22 @@
 \.deps/
 \.libs/
 Makefile
-Makefile.in
-aclocal.m4
-autom4te.cache/
-config.guess
-config.log
-config.status
-config.sub
+Makefile\.in
+aclocal\.m4
+autom4te\.cache/
+config\.guess
+config\.log
+config\.status
+config\.sub
 configure
 depcomp
 install-sh
-*.la
+*\.la
 libtool
-ltmain.sh
+ltmain\.sh
 missing
-*.o
-*.lo
-libuseless.pc
-spinner.3
+*\.o
+*\.lo
+libuseless\.pc
+*\.3
+*\.7
