--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,10 @@
 AUTOMAKE_OPTIONS = foreign
-SUFFIXES = .pod .3
+SUFFIXES = .pod .3 .7
 
-MANPAGES = spinner.3
+MAN3PAGES = spinner.3 fspinner.3 prime.3 fnprime.3 nprime.3 fprime.3
+MAN7PAGES = noreturn.7
 
-CLEANFILES = $(MANPAGES)
+CLEANFILES = $(MAN3PAGES) $(MAN7PAGES)
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libuseless.pc
@@ -11,7 +12,8 @@ pkgconfig_DATA = libuseless.pc
 lib_LTLIBRARIES = libuseless.la
 libuseless_la_SOURCES = spinner.c noreturn.c
 include_HEADERS = spinner.h noreturn.h
-man3_MANS = $(MANPAGES)
+man3_MANS = $(MAN3PAGES)
+man7_MANS = $(MAN7PAGES)
 
 maintainer-clean-generic:
 	$(RM) -r autom4te.cache
@@ -19,3 +21,6 @@ maintainer-clean-generic:
 
 .pod.3:
 	$(POD2MAN) --center "The Useless Programming Library Programmer's Manual" --section 3 $< > $@
+
+.pod.7:
+	$(POD2MAN) --center "The Useless Programming Library Programmer's Manual" --section 7 $< > $@
