Add src/Makefile.in and doc/Makefile.in to maintainer-clean

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -10,6 +10,9 @@ CLEANFILES = $(MAN3PAGES) $(MAN7PAGES)
 man3_MANS = $(MAN3PAGES)
 man7_MANS = $(MAN7PAGES)
 
+maintainer-clean-generic:
+	$(RM) Makefile.in
+
 .pod.3:
 	$(POD2MAN) --center "$(DESCRIPTION)" --section 3 $< > $@
 
