--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,3 +1,6 @@
 lib_LTLIBRARIES = libuseless.la
 libuseless_la_SOURCES = spinner.c noreturn.c
 include_HEADERS = spinner.h noreturn.h
+
+maintainer-clean-generic:
+	$(RM) Makefile.in
