--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,5 +1,6 @@
 lib_LTLIBRARIES = libuseless.la
 libuseless_la_SOURCES = spinner.c noreturn.c
+libuseless_la_LIBADD = -lm
 include_HEADERS = spinner.h noreturn.h
 
 maintainer-clean-generic:
